--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,18 @@ Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
 Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Maintainer: Marius Breitling <marius.breitling@gmail.com>
+Description: Contains several functions for importing and mapping accident 
+  data of of the Fatality Analysis Reporting System (FARS). Data can be imported
+  from the compressed csv files devlivered by FARS. Imported data can be summarized
+  and mapped afterwards.
+License: GPL
 Encoding: UTF-8
 LazyData: true
+Imports:
+    dplyr,
+    tidyr,
+    graphics,
+    maps, 
+    readr
+RoxygenNote: 7.1.0
