export every function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export(fars_map_state)
 export(fars_read)
+export(fars_read_years)
 export(fars_summarize_years)
+export(make_filename)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
